--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
 .container {
   margin-top: 20px;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 #input {
@@ -110,7 +111,32 @@ body {
 }
 
 footer {
+  line-height: 1.5;
+  color: grey;
   margin-top: 25px;
   text-align: center;
   font-family: 'Roboto', sans-serif;
+}
+
+#title {
+  font-family: arial;
+  font-size: 25px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 20px;
+}
+
+#result {
+  line-height: 1.5;
+  width: 50%;
+  margin-top: 10px;
+  font-family: 'Roboto', sans-serif;
+  color: black;
+  text-align: center;
+}
+
+footer a{
+  text-decoration: none;
+  color: purple;
+  margin: 0 4px;
 }
